NMinh: remove Google login, config db using cloud db

--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -54,14 +54,14 @@
             <hr class="flex-grow">
         </div>
 
-
+{{!-- 
         <!-- Login with Google -->
         <button type="button"
             class="w-full p-4 mb-2 text-gray-700 border-2 border-gray-300 rounded-2xl hover:bg-gray-100"
             onclick="window.location.href='#'">
             <i class="fa-brands fa-google fa-xl me-2"></i>
             Continue with Google
-        </button>
+        </button> --}}
         
         <input type="hidden" name="reqUrl" value="{{reqUrl}}">
 
