--- a/src/views/search.hbs
+++ b/src/views/search.hbs
@@ -60,7 +60,7 @@
                 <div class="font-medium hover:underline">
                     <a href="/@${user.username}">${user.username}</a>
                 </div>
-                <p class="text-[#777777] text-sm">${user.description}</p>
+                <p class="text-[#777777] text-sm">${user.fullName}</p>
                 <p class="text-[#777777] text-sm">${user.followers} followers</p>
             </div>
             <div class="flex items-center">
