--- a/src/views/signup.hbs
+++ b/src/views/signup.hbs
@@ -17,7 +17,7 @@
                 <label for="email" class="sr-only">Email</label>
                 <input type="text" id="email" class="form-control bg-[#F5F5F5] w-full p-4 outline-none rounded-xl"
                     name="email" placeholder="Email">
-                <small id="email-error" class="hidden block text-left text-red-600" style="text-indent: 1rem;"></small>
+                <small id="email-error" class="block text-center text-red-600" style="text-indent: 1rem;"></small>
             </div>
 
             <!-- Username input -->
@@ -25,8 +25,7 @@
                 <label for="username" class="sr-only">Username</label>
                 <input type="text" id="username" class="form-control bg-[#F5F5F5] w-full p-4 outline-none rounded-xl"
                     name="username" placeholder="Username">
-                <small id="username-error" class="hidden block text-left text-red-600"
-                    style="text-indent: 1rem;"></small>
+                <small id="username-error" class="block text-center text-red-600"></small>
             </div>
 
             <!-- Password Input -->
@@ -39,12 +38,11 @@
                     <i class="absolute transform -translate-y-1/2 cursor-pointer far fa-eye right-5 top-1/2 opacity-30"
                         id="togglePassword" onclick="togglePasswordVisibility(this)"></i>
                 </div>
-                <small id="password-error" class="hidden block text-left text-red-600"
-                    style="text-indent: 1rem;"></small>
+                <small id="password-error" class="block text-center text-red-600"></small>
             </div>
             {{#if signupMessage}}
-            <div class="flex justify-start">
-                <small class="text-left text-red-600" style="text-indent: 1rem;">{{{signupMessage}}}</small>
+            <div class="flex justify-center">
+                <small class="text-center text-red-600">{{{signupMessage}}}</small>
             </div>
             {{/if}}
 
@@ -176,4 +174,12 @@
         document.getElementById('signup-form').submit();
     }
 
+    document.querySelectorAll('.form-control').forEach(input => {
+        input.addEventListener('focus', () => {
+            document.querySelectorAll('.text-red-600').forEach(error => {
+                error.classList.add('hidden');
+                error.textContent = '';
+            });
+        });
+    });
 </script>
