NMinh: Fix z-index of mobile-more and thread overlay

--- a/src/views/partials/navbar.hbs
+++ b/src/views/partials/navbar.hbs
@@ -1,6 +1,6 @@
 <!-- Sidebar -->
 <div id="mobile-more"
-    class="fixed z-20 top-2 left-2 p-2 opacity-40 hover:opacity-100 cursor-pointer rounded-xl md:hidden">
+    class="fixed z-[4000] top-2 left-2 p-2 opacity-40 hover:opacity-100 cursor-pointer rounded-xl md:hidden">
     <i class="fa-solid fa-bars" onclick="showLogOutMobile()"></i>
 </div>
 
