--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -8,7 +8,7 @@
 <header
     class="flex justify-center items-center bg-transparent fixed inset-x-0 top-0 z-[2000] bg-[#fafafa] p-5 max-w-[640px] mx-auto">
     <h1 class="font-semibold title text-[15px] text-black cursor-pointer">Profile</h1>
-    <a href=""><i class="fa-brands fa-threads mt-3 fa-2xl logo hidden cursor-pointer"></i></a>
+    <a href="/"><i class="fa-brands fa-threads mt-3 fa-2xl logo hidden cursor-pointer"></i></a>
 </header>
 
 <div class="avatar-dialog-overlay fixed inset-0 bg-[#fefefe] z-[2000] justify-center items-center hidden opacity-0 transition-opacity duration-500 ease-in-out"
