NMinh: fix cookie maxAge, fix mobile UI comment in post, profile, other-profile, fix errors display in Login, valid email in forgotPassword

--- a/src/views/forgotpassword.hbs
+++ b/src/views/forgotpassword.hbs
@@ -25,12 +25,12 @@
                     name="email" 
                     placeholder="Email"
                 >
-                <small id="email-error" class="hidden block text-left text-red-600" style="text-indent: 1rem;"></small>
+                <small id="email-error" class="text-red-600"></small>
             </div>
 
             {{#if forgotMessage}}
-            <div class="flex justify-start">
-                <small class="text-left text-red-600" style="text-indent: 1rem;">{{{forgotMessage}}}</small>
+            <div class="flex justify-center">
+                <small class="text-red-600">{{{forgotMessage}}}</small>
             </div>   
             {{/if}}
             <!-- Submit Button -->
