--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -717,6 +717,14 @@ video {
   top: 16px;
 }
 
+.top-3 {
+  top: 0.75rem;
+}
+
+.right-0 {
+  right: 0px;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -731,10 +739,6 @@ video {
 
 .z-\[1001\] {
   z-index: 1001;
-}
-
-.z-\[1002\] {
-  z-index: 1002;
 }
 
 .z-\[2000\] {
@@ -901,8 +905,8 @@ video {
   margin-top: 2px;
 }
 
-.mt-\[50px\] {
-  margin-top: 50px;
+.mt-\[60px\] {
+  margin-top: 60px;
 }
 
 .block {
@@ -2134,6 +2138,12 @@ video {
   }
 }
 
+@media (min-width: 700px) {
+  .mobile\:right-4 {
+    right: 1rem;
+  }
+}
+
 @media (min-width: 768px) {
   .md\:right-4 {
     right: 1rem;
@@ -2141,6 +2151,18 @@ video {
 
   .md\:top-4 {
     top: 1rem;
+  }
+
+  .md\:left-4 {
+    left: 1rem;
+  }
+
+  .md\:left-0 {
+    left: 0px;
+  }
+
+  .md\:left-8 {
+    left: 2rem;
   }
 
   .md\:mt-6 {
